--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
       <section>
         <div class = "row">
           <h1>Test Git</h1>
+          <h2>Quyết tâm chiến thắng dịch</h2>
 
         </div>
       </section>
